--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-  "name": "ccvonlinepayments/prestashop",
+  "name": "ccv/prestashop",
   "description": "CCVOnlinePayments for Prestashop",
-  "homepage": "https://www.ccvshop.nl/ccv-online-payments",
+  "homepage": "https://www.ccv.eu/nl/betaaloplossingen/betaaloplossingen-online/ccv-online-payments/",
   "type": "prestashop-module",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "require": {
-    "ccvonlinepayments/lib": "^1.0"
+    "ccv/lib": "^1.1"
   },
   "require-dev": {
-    "ccvonlinepayments/images": "^1.0"
+    "ccv/images": "^1.1"
   },
   "config": {
     "preferred-install": "dist"
