--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,20 @@
   "homepage": "https://github.com/CCV/ccvonlinepayments-prestashop/",
   "license": "MIT",
   "type": "prestashop-module",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "require": {
-    "ccv/php-lib": "^1.3.0"
+    "ccv/php-lib": "^1.4.0"
   },
   "require-dev": {
     "ccv/images": "^1.1.3"
   },
   "config": {
     "preferred-install": "dist"
-  }
+  },
+  "repositories": [
+    {
+      "type": "path",
+      "url": "../lib/"
+    }
+  ]
 }
