--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,16 @@
   "homepage": "https://github.com/CCV/ccvonlinepayments-prestashop/",
   "license": "MIT",
   "type": "prestashop-module",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "require": {
-    "ccv/php-lib": "^1.4.0"
+    "ccv/php-lib": "^2",
+    "ccv/images": "^1.1.3"
   },
   "require-dev": {
-    "ccv/images": "^1.1.3"
+    "phpstan/phpstan": "^2.1",
+    "stancer/php-stubs-prestashop": "^8.2"
   },
   "config": {
     "preferred-install": "dist"
-  },
-  "repositories": [
-    {
-      "type": "path",
-      "url": "../lib/"
-    }
-  ]
+  }
 }
